--- a/aboutus.html
+++ b/aboutus.html
@@ -40,7 +40,7 @@
               <a href="solar.html" class="menuitem" aria-current="page">Solar</a>
             </li>
             <li>
-              <a href="software.html" class="menuitem">Software</a>
+              <a href="software.html" class="menuitem ">Software</a>
             </li>
             <li>
               <a href="hardware.html" class="menuitem">Hardware</a>
@@ -98,7 +98,7 @@
             <ul class="sticky top-0 cc-scrollspy" data-hs-scrollspy="#scrollspy-2"
               data-hs-scrollspy-scrollable-parent="#scrollspy-scrollable-parent-2">
               <li data-hs-scrollspy-group>
-                <a href="#about-us" class="menuactive1">About Us</a>
+                <a href="#about-us" class="menuitem1 menuactive1">About Us</a>
               </li>
               <li data-hs-scrollspy-group>
                 <a href="#what-we-offer" class="menuitem1">What we offer</a>
@@ -111,6 +111,7 @@
               </li>
             </ul>
           </div>
+
           <div class="col-span-4 md:pl-10 pl-0">
             <div id="scrollspy-2" class="space-y-12">
               <div id="about-us" class="space-y-5">
