--- a/hardware.html
+++ b/hardware.html
@@ -97,7 +97,7 @@
             <ul class="sticky top-0 cc-scrollspy" data-hs-scrollspy="#scrollspy-2"
               data-hs-scrollspy-scrollable-parent="#scrollspy-scrollable-parent-2">
               <li data-hs-scrollspy-group>
-                <a href="#connectivity-modem" class="menuactive1">Connectivity Modem</a>
+                <a href="#connectivity-modem" class="menuactive1 menuitem1">Connectivity Modem</a>
               </li>
               <li data-hs-scrollspy-group>
                 <a href="#industrial-conversion" class="menuitem1">Industrial Conversion
