--- a/index.html
+++ b/index.html
@@ -505,7 +505,7 @@
     <section>
       <div class="px-4 pb-16 mx-auto container  md:px-24 lg:px-8 lg:pb-20">
         <div class="grid gap-5 row-gap-5 mb-8 lg:grid-cols-3 sm:grid-cols-2">
-          <div href="/" aria-label="View Item"
+          <div href="blog1.html" aria-label="View Item"
             class="inline-block overflow-hidden duration-300 transform rounded shadow-sm hover:-translate-y-1">
             <div class="flex flex-col h-full">
               <img src="img/news1.png" class="object-cover w-full h-60" alt="" />
@@ -519,14 +519,14 @@
                     and distributors, as well as service providers, project
                     planners, and developers...
                   </p>
-                  <a class="text-lg font-semibold text-gray-900" href="#">
+                  <a class="text-lg font-semibold text-gray-900" href="blog1.html">
                     Read more...
                   </a>
                 </div>
               </div>
             </div>
           </div>
-          <div href="/" aria-label="View Item"
+          <div href="blog2.html" aria-label="View Item"
             class="inline-block overflow-hidden duration-300 transform rounded shadow-sm hover:-translate-y-1">
             <div class="flex flex-col h-full">
               <img src="img/news2.gif" class="object-cover w-full h-60" alt="" />
@@ -540,14 +540,14 @@
                     energy from sunshine and transform it into useful energy at
                     home. Making a move to...
                   </p>
-                  <a class="text-lg font-semibold text-gray-900" href="#">
+                  <a class="text-lg font-semibold text-gray-900" href="blog2.html">
                     Read more...
                   </a>
                 </div>
               </div>
             </div>
           </div>
-          <div href="/" aria-label="View Item"
+          <div href="blog3.html" aria-label="View Item"
             class="inline-block overflow-hidden duration-300 transform rounded shadow-sm hover:-translate-y-1">
             <div class="flex flex-col h-full">
               <img src="img/news3.jpg" class="object-cover w-full h-60" alt="" />
@@ -561,7 +561,7 @@
                     energy from sunshine and transform it into useful energy at
                     home. Making a move to...
                   </p>
-                  <a class="text-lg font-semibold text-gray-900" href="#">
+                  <a class="text-lg font-semibold text-gray-900" href="blog3.html">
                     Read more...
                   </a>
                 </div>
@@ -569,16 +569,7 @@
             </div>
           </div>
         </div>
-        <div class="text-center">          
-          <a href="/"
-            class="text-white bg-[#4E8BE4] hover:bg-black focus:ring-4 text-base font-medium px-6 py-3  shadow-[0_17px_35px_0px_#CEDCF2] inline-flex items-center justify-center transition duration-200 rounded shadow-md  ">
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" height="15" fill="#fff" class="mr-2">
-              <path
-                d="M463.5 224H472c13.3 0 24-10.7 24-24V72c0-9.7-5.8-18.5-14.8-22.2s-19.3-1.7-26.2 5.2L413.4 96.6c-87.6-86.5-228.7-86.2-315.8 1c-87.5 87.5-87.5 229.3 0 316.8s229.3 87.5 316.8 0c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0c-62.5 62.5-163.8 62.5-226.3 0s-62.5-163.8 0-226.3c62.2-62.2 162.7-62.5 225.3-1L327 183c-6.9 6.9-8.9 17.2-5.2 26.2s12.5 14.8 22.2 14.8H463.5z" />
-            </svg>
-            Load More
-          </a>
-        </div>
+      
       </div>
     </section>
     <section class="bg-[#F5F7FF] text-main py-20">
