--- a/projects.html
+++ b/projects.html
@@ -98,7 +98,7 @@
             <ul class="sticky top-0 cc-scrollspy" data-hs-scrollspy="#scrollspy-2"
               data-hs-scrollspy-scrollable-parent="#scrollspy-scrollable-parent-2">
               <li data-hs-scrollspy-group>
-                <a href="#mw-level-projects" class="menuactive1">MW Level projects
+                <a href="#mw-level-projects" class="menuactive1 menuitem1">MW Level projects
                 </a>
               </li>
               <li data-hs-scrollspy-group>
