--- a/software.html
+++ b/software.html
@@ -98,7 +98,7 @@
             <ul class="sticky top-0 cc-scrollspy" data-hs-scrollspy="#scrollspy-2"
               data-hs-scrollspy-scrollable-parent="#scrollspy-scrollable-parent-2">
               <li data-hs-scrollspy-group>
-                <a href="#scada-system" class="menuactive1">Scada System</a>
+                <a href="#scada-system" class="menuactive1 menuitem1">Scada System</a>
               </li>
               <li data-hs-scrollspy-group>
                 <a href="#engineering" class="menuitem1">Engineering </a>
