--- a/solar.html
+++ b/solar.html
@@ -97,7 +97,7 @@
             <ul class="sticky top-0 cc-scrollspy" data-hs-scrollspy="#scrollspy-2"
               data-hs-scrollspy-scrollable-parent="#scrollspy-scrollable-parent-2">
               <li data-hs-scrollspy-group>
-                <a href="#whysolar" class="menuactive1">Why Solar</a>
+                <a href="#whysolar" class="menuactive1 menuitem1">Why Solar</a>
               </li>
               <li data-hs-scrollspy-group>
                 <a href="#solar-projects" class="menuitem1">Solar Projects </a>
