--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <nav class="w-full z-20 top-0 start-0 border-b border-gray-200">
       <div class="container w-full flex flex-wrap items-center justify-between mx-auto p-2 sm:p-5">
         <a href="./" class="flex items-center space-x-3 rtl:space-x-reverse">
-          <img src="img/logo.svg" class="h-10 sm:h-16" alt="  Logo" />
+          <img src="img/logo.png" class="h-10 sm:h-16" alt="  Logo" />
         </a>
         <div class="flex md:order-2 space-x-3 md:space-x-0 rtl:space-x-reverse">
           <a href="contact.html" class="cont-btn">Contact Us</a>
@@ -85,19 +85,19 @@
         <div class="hs-carousel-slide">
           <div class="flex justify-center     min-h-[700px] bg-[#4D77C7]  bg-cover ">
             <img class="g-cover object-cover w-full mx-auto self-center transition duration-700 min-h-[700px]" alt="1"
-            src="img/ban1.svg" />
+            src="img/ban1.jpg" />
           </div>
         </div>
         <div class="hs-carousel-slide">
           <div class="flex justify-center   min-h-[700px] bg-[#4D77C7]  bg-cover ">
             <img class="  bg-cover object-cover w-full mx-auto self-center transition duration-700 min-h-[700px]" alt="1"
-            src="img/ban2.svg" />
+            src="img/ban2.jpg" />
           </div>
         </div>
         <div class="hs-carousel-slide">
           <div class="flex justify-center  min-h-[700px] bg-[#4D77C7]  bg-cover ">
             <img class="  bg-cover object-cover w-full mx-auto self-center transition duration-700 min-h-[700px]" alt="1"
-            src="img/ban3.svg" />
+            src="img/ban3.jpg" />
           </div>
         </div>
       </div>
@@ -148,7 +148,7 @@
           <a href="/" aria-label="View Item"
             class="group inline-block overflow-hidden duration-300 transform hover:shadow-[0_30px_40px_0px_#E6EAF1] hover:border-[#4E8BE4] border-2 border-transparent hover:border-2 rounded-lg bg-gray-100 hover:bg-[#EEF1FF]">
             <div class="flex flex-col h-full p-5">
-              <img src="img/solar.svg" class="object-contain w-full h-36 " alt="" />
+              <img src="img/solar.png" class="object-contain w-full h-36 " alt="" />
               <div class="flex-grow rounded-b">
                 <div class=" ">
                   <h6 class="flex justify-between my-6 font-bold text-2xl">Solar Power 
@@ -171,7 +171,7 @@
           <a href="/" aria-label="View Item"
             class="group inline-block overflow-hidden duration-300 transform hover:shadow-[0_30px_40px_0px_#E6EAF1] hover:border-[#4E8BE4] border-2 border-transparent hover:border-2 rounded-lg bg-gray-100 hover:bg-[#EEF1FF]">
             <div class="flex flex-col h-full p-5">
-              <img src="img/pristine.svg" class="object-contain w-full h-36" alt="" />
+              <img src="img/pristine1.png" class="object-contain w-full h-36" alt="" />
               <div class="flex-grow rounded-b">
                 <div class=" ">
                   <h6 class="flex justify-between my-6 font-bold text-2xl">Pristine- SCADA <div class="duration-300 group-hover:visible invisible flex items-center "> <svg width="20" height="19" viewBox="0 0 20 19" fill="none" xmlns="http://www.w3.org/2000/svg" >
@@ -189,7 +189,7 @@
           <a href="/" aria-label="View Item"
             class="group inline-block overflow-hidden duration-300 transform hover:shadow-[0_30px_40px_0px_#E6EAF1] hover:border-[#4E8BE4] border-2 border-transparent hover:border-2 rounded-lg bg-gray-100 hover:bg-[#EEF1FF]">
             <div class="flex flex-col h-full p-5">
-              <img src="img/software.svg" class="object-contain w-full h-36" alt="" />
+              <img src="img/software.png" class="object-contain w-full h-36" alt="" />
               <div class="flex-grow rounded-b">
                 <div class=" ">
                   <h6 class="flex justify-between my-6 font-bold text-2xl">Software Products <div class="duration-300 group-hover:visible invisible flex items-center "> <svg width="20" height="19" viewBox="0 0 20 19" fill="none" xmlns="http://www.w3.org/2000/svg" >
@@ -209,7 +209,7 @@
           <a href="/" aria-label="View Item"
             class="group inline-block overflow-hidden duration-300 transform hover:shadow-[0_30px_40px_0px_#E6EAF1] hover:border-[#4E8BE4] border-2 border-transparent hover:border-2 rounded-lg bg-gray-100 hover:bg-[#EEF1FF]">
             <div class="flex flex-col h-full p-5">
-              <img src="img/hardware.svg" class="object-contain w-full h-36" alt="" />
+              <img src="img/hardware.png" class="object-contain w-full h-36" alt="" />
               <div class="flex-grow rounded-b">
                 <div class=" ">
                   <h6 class="flex justify-between my-6 font-bold text-2xl">Hardware Products <div class="duration-300 group-hover:visible invisible flex items-center "> <svg width="20" height="19" viewBox="0 0 20 19" fill="none" xmlns="http://www.w3.org/2000/svg" >
@@ -295,7 +295,7 @@
                             d="M17.25 8.25L21 12m0 0l-3.75 3.75M21 12H3"></path>
                         </svg>
                       </a>
-                      <img src="img/bms.svg" alt=""
+                      <img src="img/bms.jpg" alt=""
                         class="rounded sm:h-64 h-auto relative lg:absolute top-0 right-0 lg:-top-20 lg:right-[-18rem]" />
                     </div>
                   </div>
@@ -330,7 +330,7 @@
                             d="M17.25 8.25L21 12m0 0l-3.75 3.75M21 12H3"></path>
                         </svg>
                       </a>
-                      <img src="img/bms.svg" alt=""
+                      <img src="img/bms.jpg" alt=""
                         class="rounded sm:h-64 h-auto relative lg:absolute top-0 right-0 lg:-top-20 lg:right-[-18rem]" />
                     </div>
                   </div>
@@ -365,7 +365,7 @@
                             d="M17.25 8.25L21 12m0 0l-3.75 3.75M21 12H3"></path>
                         </svg>
                       </a>
-                      <img src="img/bms.svg" alt=""
+                      <img src="img/bms.jpg" alt=""
                         class="rounded sm:h-64 h-auto relative lg:absolute top-0 right-0 lg:-top-20 lg:right-[-18rem]" />
                     </div>
                   </div>
@@ -400,7 +400,7 @@
                             d="M17.25 8.25L21 12m0 0l-3.75 3.75M21 12H3"></path>
                         </svg>
                       </a>
-                      <img src="img/bms.svg" alt=""
+                      <img src="img/bms.jpg" alt=""
                         class="rounded sm:h-64 h-auto relative lg:absolute top-0 right-0 lg:-top-20 lg:right-[-18rem]" />
                     </div>
                   </div>
@@ -435,7 +435,7 @@
                             d="M17.25 8.25L21 12m0 0l-3.75 3.75M21 12H3"></path>
                         </svg>
                       </a>
-                      <img src="img/bms.svg" alt=""
+                      <img src="img/bms.jpg" alt=""
                         class="rounded sm:h-64 h-auto relative lg:absolute top-0 right-0 lg:-top-20 lg:right-[-18rem]" />
                     </div>
                   </div>
@@ -470,7 +470,7 @@
                             d="M17.25 8.25L21 12m0 0l-3.75 3.75M21 12H3"></path>
                         </svg>
                       </a>
-                      <img src="img/bms.svg" alt=""
+                      <img src="img/bms.jpg" alt=""
                         class="rounded sm:h-64 h-auto relative lg:absolute top-0 right-0 lg:-top-20 lg:right-[-18rem]" />
                     </div>
                   </div>
@@ -595,13 +595,13 @@
                 <div><img class="object-contain" src="img/c6.svg" /></div>
                 <div><img class="object-contain" src="img/c7.svg" /></div>
                 <div><img class="object-contain" src="img/c8.svg" /></div>
-                <div><img class="object-contain" src="img/c9.svg" /></div>
+                <div><img class="object-contain" src="img/c9.png" /></div>
                 <div><img class="object-contain" src="img/c4.svg" /></div>
                 <div><img class="object-contain" src="img/c5.svg" /></div>
                 <div><img class="object-contain" src="img/c6.svg" /></div>
                 <div><img class="object-contain" src="img/c7.svg" /></div>
                 <div><img class="object-contain" src="img/c8.svg" /></div>
-                <div><img class="object-contain" src="img/c9.svg" /></div>
+                <div><img class="object-contain" src="img/c9.png" /></div>
               </div>
             </div>
           </div>
@@ -623,7 +623,7 @@
           <a href="/" aria-label="View Item">
             <div
               class="relative overflow-hidden transition duration-200 transform rounded shadow-lg hover:-translate-y-2 hover:shadow-2xl">
-              <img class="object-cover w-full h-56 md:h-64 xl:h-80" src="img/gal1.svg" alt="" />
+              <img class="object-cover w-full h-56 md:h-64 xl:h-80" src="img/gal1.jpg" alt="" />
             </div>
             <p class="text-base font-medium tracking-wide text-para mt-3">
               5 MW Plant with Tandem Cells and 4 numbers of Central inverters at
@@ -633,7 +633,7 @@
           <a href="/" aria-label="View Item">
             <div
               class="relative overflow-hidden transition duration-200 transform rounded shadow-lg hover:-translate-y-2 hover:shadow-2xl">
-              <img class="object-cover w-full h-56 md:h-64 xl:h-80" src="img/gal2.svg" alt="" />
+              <img class="object-cover w-full h-56 md:h-64 xl:h-80" src="img/gal2.jpg" alt="" />
             </div>
             <p class="text-base font-medium tracking-wide text-para mt-3">
               5 MW Plant with Tandem Cells and 4 numbers of Central inverters at
@@ -643,7 +643,7 @@
           <a href="/" aria-label="View Item">
             <div
               class="relative overflow-hidden transition duration-200 transform rounded shadow-lg hover:-translate-y-2 hover:shadow-2xl">
-              <img class="object-cover w-full h-56 md:h-64 xl:h-80" src="img/gal3.svg" alt="" />
+              <img class="object-cover w-full h-56 md:h-64 xl:h-80" src="img/gal3.jpg" alt="" />
             </div>
             <p class="text-base font-medium tracking-wide text-para mt-3">
               1 MW crystalline modules with central inverters and compact
@@ -653,7 +653,7 @@
           <a href="/" aria-label="View Item">
             <div
               class="relative overflow-hidden transition duration-200 transform rounded shadow-lg hover:-translate-y-2 hover:shadow-2xl">
-              <img class="object-cover w-full h-56 md:h-64 xl:h-80" src="img/gal4.svg" alt="" />
+              <img class="object-cover w-full h-56 md:h-64 xl:h-80" src="img/gal4.jpg" alt="" />
             </div>
             <p class="text-base font-medium tracking-wide text-para mt-3">
               This Google Earth image illustrates our 1 MW power plant,
@@ -663,7 +663,7 @@
           <a href="/" aria-label="View Item">
             <div
               class="relative overflow-hidden transition duration-200 transform rounded shadow-lg hover:-translate-y-2 hover:shadow-2xl">
-              <img class="object-cover w-full h-56 md:h-64 xl:h-80" src="img/gal5.svg" alt="" />
+              <img class="object-cover w-full h-56 md:h-64 xl:h-80" src="img/gal5.jpg" alt="" />
             </div>
             <p class="text-base font-medium tracking-wide text-para mt-3">
               750 kW roof top system for Surat Municipal Corporation.
@@ -673,7 +673,7 @@
           <a href="/" aria-label="View Item">
             <div
               class="relative overflow-hidden transition duration-200 transform rounded shadow-lg hover:-translate-y-2 hover:shadow-2xl">
-              <img class="object-cover w-full h-56 md:h-64 xl:h-80" src="img/gal6.svg" alt="" />
+              <img class="object-cover w-full h-56 md:h-64 xl:h-80" src="img/gal6.jpg" alt="" />
             </div>
             <p class="text-base font-medium tracking-wide text-para mt-3">
               11 MW Plant with Frameless Thin film module and containerised
