--- a/software.html
+++ b/software.html
@@ -19,7 +19,7 @@
     <nav class="bg-white w-full z-20 top-0 start-0 border-b border-gray-200">
       <div class="container flex flex-wrap items-center justify-between mx-auto p-2 sm:p-5">
         <a href="./" class="flex items-center space-x-3 rtl:space-x-reverse">
-          <img src="img/logo.svg" class="h-10 sm:h-16" alt="  Logo" />
+          <img src="img/logo.png" class="h-10 sm:h-16" alt="  Logo" />
         </a>
         <div class="flex md:order-2 space-x-3 md:space-x-0 rtl:space-x-reverse">
           <a href="contact.html" class="cont-btn">Contact Us</a>
@@ -81,7 +81,7 @@
     <!-- Banner-->
     <section class="">
       <div class="relative">
-        <img src="img/software-banner.svg" class="absolute inset-0 object-cover w-full h-full" alt="" />
+        <img src="img/software-banner.jpg" class="absolute inset-0 object-cover w-full h-full" alt="" />
         <div class="relative">
           <div class="mx-auto sm:max-w-xl md:max-w-full lg:max-w-screen-xl">
             <div class="flex flex-col items-center justify-between xl:flex-row">
@@ -390,7 +390,7 @@
                   <a href="/" aria-label="View Item">
                     <div
                       class="relative overflow-hidden transition duration-200 transform rounded shadow-lg hover:-translate-y-2 hover:shadow-2xl">
-                      <img class="object-cover w-full" src="img/gal1.svg" alt="" />
+                      <img class="object-cover w-full" src="img/gal1.jpg" alt="" />
                     </div>
                     <p class="text-base font-medium tracking-wide text-para mt-3">
                       <strong>Pristine Main Screen : </strong> The Pristine Main
@@ -402,7 +402,7 @@
                   <a href="/" aria-label="View Item">
                     <div
                       class="relative overflow-hidden transition duration-200 transform rounded shadow-lg hover:-translate-y-2 hover:shadow-2xl">
-                      <img class="object-cover w-full" src="img/gal2.svg" alt="" />
+                      <img class="object-cover w-full" src="img/gal2.jpg" alt="" />
                     </div>
                     <p class="text-base font-medium tracking-wide text-para mt-3">
                       <strong> Pristine Data Analysis Module:</strong> This
@@ -413,7 +413,7 @@
                   <a href="/" aria-label="View Item">
                     <div
                       class="relative overflow-hidden transition duration-200 transform rounded shadow-lg hover:-translate-y-2 hover:shadow-2xl">
-                      <img class="object-cover w-full" src="img/gal3.svg" alt="" />
+                      <img class="object-cover w-full" src="img/gal3.jpg" alt="" />
                     </div>
                     <p class="text-base font-medium tracking-wide text-para mt-3">
                       <strong> Pristine Data Viewer Module: </strong>The
@@ -424,7 +424,7 @@
                   <a href="/" aria-label="View Item">
                     <div
                       class="relative overflow-hidden transition duration-200 transform rounded shadow-lg hover:-translate-y-2 hover:shadow-2xl">
-                      <img class="object-cover w-full" src="img/gal4.svg" alt="" />
+                      <img class="object-cover w-full" src="img/gal4.jpg" alt="" />
                     </div>
                     <p class="text-base font-medium tracking-wide text-para mt-3">
                       <strong>Pristine Alarm Module:</strong> A new alarm can be
@@ -435,7 +435,7 @@
                   <a href="/" aria-label="View Item">
                     <div
                       class="relative overflow-hidden transition duration-200 transform rounded shadow-lg hover:-translate-y-2 hover:shadow-2xl">
-                      <img class="object-cover w-full" src="img/gal5.svg" alt="" />
+                      <img class="object-cover w-full" src="img/gal5.jpg" alt="" />
                     </div>
                     <p class="text-base font-medium tracking-wide text-para mt-3">
                       <strong> Pristine Task Schedular Module:</strong> The
@@ -447,7 +447,7 @@
                   <a href="/" aria-label="View Item">
                     <div
                       class="relative overflow-hidden transition duration-200 transform rounded shadow-lg hover:-translate-y-2 hover:shadow-2xl">
-                      <img class="object-cover w-full" src="img/gal6.svg" alt="" />
+                      <img class="object-cover w-full" src="img/gal6.jpg" alt="" />
                     </div>
                     <p class="text-base font-medium tracking-wide text-para mt-3">
                       <strong> Pristine Data Transfer Module: </strong> This
@@ -457,7 +457,7 @@
                   <a href="/" aria-label="View Item">
                     <div
                       class="relative overflow-hidden transition duration-200 transform rounded shadow-lg hover:-translate-y-2 hover:shadow-2xl">
-                      <img class="object-cover w-full" src="img/gal6.svg" alt="" />
+                      <img class="object-cover w-full" src="img/gal6.jpg" alt="" />
                     </div>
                     <p class="text-base font-medium tracking-wide text-para mt-3">
                       <strong> Pristine Data Processing Module:</strong> This
@@ -467,7 +467,7 @@
                   <a href="/" aria-label="View Item">
                     <div
                       class="relative overflow-hidden transition duration-200 transform rounded shadow-lg hover:-translate-y-2 hover:shadow-2xl">
-                      <img class="object-cover w-full" src="img/gal6.svg" alt="" />
+                      <img class="object-cover w-full" src="img/gal6.jpg" alt="" />
                     </div>
                     <p class="text-base font-medium tracking-wide text-para mt-3">
                       <strong> Pristine Schema Generation Module:</strong> The
@@ -478,7 +478,7 @@
                   <a href="/" aria-label="View Item">
                     <div
                       class="relative overflow-hidden transition duration-200 transform rounded shadow-lg hover:-translate-y-2 hover:shadow-2xl">
-                      <img class="object-cover w-full" src="img/gal6.svg" alt="" />
+                      <img class="object-cover w-full" src="img/gal6.jpg" alt="" />
                     </div>
                     <p class="text-base font-medium tracking-wide text-para mt-3">
                       <strong> Pristine Data Definition Module:</strong> Users
@@ -489,7 +489,7 @@
                   <a href="/" aria-label="View Item">
                     <div
                       class="relative overflow-hidden transition duration-200 transform rounded shadow-lg hover:-translate-y-2 hover:shadow-2xl">
-                      <img class="object-cover w-full" src="img/gal6.svg" alt="" />
+                      <img class="object-cover w-full" src="img/gal6.jpg" alt="" />
                     </div>
                     <p class="text-base font-medium tracking-wide text-para mt-3">
                       <strong> Pristine Data Report Module: </strong>The
