--- a/blog3.html
+++ b/blog3.html
@@ -19,7 +19,7 @@
     <nav class="bg-white w-full z-20 top-0 start-0 border-b border-gray-200">
       <div class="container flex flex-wrap items-center justify-between mx-auto p-2 sm:p-5">
         <a href="./" class="flex items-center space-x-3 rtl:space-x-reverse">
-          <img src="img/logo.svg" class="h-10 sm:h-16" alt="  Logo" />
+          <img src="img/logo.png" class="h-10 sm:h-16" alt="  Logo" />
         </a>
         <div class="flex md:order-2 space-x-3 md:space-x-0 rtl:space-x-reverse">
           <a href="contact.html" class="cont-btn">Contact Us</a>
