--- a/contact.html
+++ b/contact.html
@@ -166,7 +166,7 @@
                         placeholder="Service You Need" />
                     </div>
                     <div class="relative">
-                      <div class="absolute inset-y-0 start-0 flex items-center ps-3.5 pointer-events-none">
+                      <div class="absolute inset-y-0 start-0 flex mt-4 ml-1  ps-3.5 pointer-events-none">
                         <svg width="20" height="20" viewBox="0 0 23 23" fill="none" xmlns="http://www.w3.org/2000/svg">
                           <g clip-path="url(#clip0_271_570)">
                             <path
@@ -183,9 +183,9 @@
                           </defs>
                         </svg>
                       </div>
-                      <input type="text" id="name"
-                        class="bg-gray-50 border ml-1 border-gray-200 text-gray-900 text-sm rounded-sm focus:ring-blue-500 focus:border-blue-500 block w-full ps-10 p-4"
-                        placeholder="Any Note For Us" />
+                      
+                        <textarea id="message" rows="4" class="bbg-gray-50 border ml-1 border-gray-200 text-gray-900 text-sm rounded-sm focus:ring-blue-500 focus:border-blue-500 block w-full ps-10 p-4" placeholder="Any Note For Us"></textarea>
+
                     </div>
                   </div>
                 </div>
