--- a/index.html
+++ b/index.html
@@ -85,19 +85,19 @@
         <div class="hs-carousel-slide">
           <div class="flex justify-center     min-h-[700px] bg-[#4D77C7]  bg-cover ">
             <img class="g-cover object-cover w-full mx-auto self-center transition duration-700 min-h-[700px]" alt="1"
-            src="img/ban1.jpg" />
+            src="./img/ban1.jpg" />
           </div>
         </div>
         <div class="hs-carousel-slide">
           <div class="flex justify-center   min-h-[700px] bg-[#4D77C7]  bg-cover ">
             <img class="  bg-cover object-cover w-full mx-auto self-center transition duration-700 min-h-[700px]" alt="1"
-            src="img/ban2.jpg" />
+            src="./img/ban2.jpg" />
           </div>
         </div>
         <div class="hs-carousel-slide">
           <div class="flex justify-center  min-h-[700px] bg-[#4D77C7]  bg-cover ">
             <img class="  bg-cover object-cover w-full mx-auto self-center transition duration-700 min-h-[700px]" alt="1"
-            src="img/ban3.jpg" />
+            src="./img/ban3.jpg" />
           </div>
         </div>
       </div>
