--- a/solar.html
+++ b/solar.html
@@ -12,10 +12,11 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.3.0/flowbite.min.js"></script>
     <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
     <link href="./output.css" rel="stylesheet" />
-    <script type="text/javascript" src="node_modules/preline/dist/preline.js"></script>
+    <script type="text/javascript" src=" preline.js"></script>
   </head>
 
   <body class=" ">
+    
     <nav class="bg-white w-full z-20 top-0 start-0 border-b border-gray-200">
       <div class="container flex flex-wrap items-center justify-between mx-auto p-2 sm:p-5">
         <a href="./" class="flex items-center space-x-3 rtl:space-x-reverse">
